[tool.poetry]
name = "pylibrope"
version = "0.1.0"
description = ""
authors = ["thisLight <l1589002388@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<4"
pyzmq = "^22.0.3"
multidict = "^5.1.0"
pynacl = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
mypy = "^0.800"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
